[project]
    name = "rag-pr"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "bs4>=0.0.2",
        "deeplake<4",
        "ipykernel>=6.29.5",
        "ipywidgets>=8.1.7",
        "llama-index>=0.12.41",
        "llama-index-embeddings-mistralai>=0.3.0",
        "llama-index-embeddings-openai>=0.3.1",
        "llama-index-vector-stores-deeplake>=0.3.3",
        "nltk>=3.9.1",
        "python-dotenv>=1.1.0",
        "wikipedia-api>=0.8.1",
]
[tool.uv]
    required-environments = [
        "sys_platform == 'linux' and platform_machine == 'x86_64'",
    ]
