[project]
    name = "rag-pr"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        "deeplake<4",
        "ipykernel>=6.29.5",
        "ipywidgets>=8.1.7",
        "langchain>=0.3.26",
        "langchain-community>=0.3.21",
        "langchain-localai>=0.1.2",
        "langchain-openai>=0.3.27",
        "llama-index>=0.12.41",
        "llama-index-embeddings-huggingface>=0.5.4",
        "llama-index-embeddings-mistralai>=0.3.0",
        "llama-index-embeddings-openai>=0.3.1",
        "llama-index-llms-zhipuai>=0.3.0",
        "llama-index-vector-stores-deeplake>=0.3.3",
        "matplotlib>=3.10.3",
        "networks>=0.3.7",
        "nltk>=3.9.1",
        "pymilvus>=2.5.11",
        "python-dotenv>=1.1.0",
        "pyvis>=0.3.2",
        "sentence-transformers>=4.1.0",
        "wikipedia-api>=0.8.1",
]
[tool.uv]
    required-environments = [
        "sys_platform == 'linux' and platform_machine == 'x86_64'",
    ]
