[project]
name = "rag-wikipedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "llama-index>=0.12.37",
    "llama-index-embeddings-huggingface>=0.5.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
