[project]
    name = "rag-wikipedia"
    version = "0.1.0"
    description = "uv managed packages"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "jupyter>=1.1.1",
        "llama-index>=0.12.37",
        "llama-index-embeddings-huggingface>=0.5.4",
        "llama-index-vector-stores-deeplake>=0.3.3",
        "nltk>=3.9.1",
        "python-dotenv>=1.1.0",
        "requests>=2.32.3",
        "torch>=2.7.0",
        "wikipedia-api>=0.8.1",
]
